--- a/index_myProjects.html
+++ b/index_myProjects.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <h1> My Projects </h1>
-    <h2> 1. Baby Names</h2>
+   <a href="https://azbir3.github.io/">GitHub</a>
+   <h2> 1. Baby Names</h2>
 </body>
 </html>
